plugins {
	id 'java'
	id 'org.springframework.boot' version "${springBootVersion}"
	id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
}

group = 'com.dressca'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation supportDependencies.spring_boot_starter
	implementation supportDependencies.spring_boot_transaction
	implementation supportDependencies.commons_lang3

	implementation project(':modules')
	
	testImplementation supportDependencies.spring_boot_starter_test
}

configurations {
	all {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}

bootJar {
	enabled = false
}

jar {
	enabled = true
}
